# explorica

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  ci_lint.yml  ci_tests.yml  deploy_pypi.yml  docs.yml  docs_link_check.yml
docs/: _links.rst
docs/source/: conf.py  explorica.data_quality.outliers.rst  explorica.data_quality.rst  explorica.interactions.rst  explorica.reports.core.rst  explorica.reports.presets.blocks.rst  explorica.reports.presets.rst  explorica.reports.renderers.rst  explorica.reports.rst  explorica.rst  explorica.visualizations.rst  index.rst  modules.rst
notebooks/: pipeline_demo.ipynb
scripts/: ci_lint.sh  ci_test.sh  ci_test_build.ps1  ci_test_build.sh  docs_build.sh  docs_doctests.sh  docs_link_check.sh
src/eda_tools/: feature_engineer.py  interaction_analyzer.py  outlier_handler.py  visualizer.py
src/explorica/: __init__.py  _utils.py  data_preprocessor.py  outlier_handler.py  types.py
src/explorica/_utils/: __init__.py  conversion.py  helpers.py  io.py  readers.py  types.py  validation.py
src/explorica/config/: aliases.json  messages.json
src/explorica/data_quality/: __init__.py  _utils.py  data_preprocessing.py  data_preprocessor.py  data_quality_handler.py  feature_engineer.py  feature_engineering.py  information_metrics.py  outlier_handler.py  summary.py
src/explorica/data_quality/outliers/: __init__.py  detection.py  handling.py  stats.py
src/explorica/interaction_analyzer/: aggregators.py  correlation_matrices.py  correlation_metrics.py  interaction_analyzer.py
src/explorica/interactions/: __init__.py  aggregators.py  correlation_matrices.py  correlation_metrics.py  interaction_analyzer.py
src/explorica/reports/: __init__.py  core.py  renderers.py  utils.py
src/explorica/reports/core/: __init__.py  block.py  report.py
src/explorica/reports/presets/: __init__.py  data_overview.py  data_quality.py  eda.py  interactions.py
src/explorica/reports/presets/blocks/: __init__.py  cardinality.py  ctm.py  data_quality_overview.py  data_shape.py  distributions.py  outliers.py  relations_linear.py  relations_nonlinear.py
src/explorica/reports/renderers/: __init__.py  html.py  pdf.py
src/explorica/visualizations/: __init__.py  _utils.py  plots.py  scatterplot.py  statistical_plots.py
tests/integration/data_quality/: test_data_preprocessing.py  test_get_summary.py
tests/integration/data_quality/outliers/: test_stats.py
tests/integration/reports/: test_renderers.py  test_utils.py
tests/integration/reports/core/: test_block.py
tests/integration/reports/presets/: test_blocks.py  test_combines.py
tests/unit/: test_interaction_analyzer.py  test_visualizations.py
tests/unit/_utils/: test_convert_utils.py  test_io.py  test_validation_utils.py
tests/unit/data_quality/: test_data_preprocessing.py  test_data_quality_handler.py  test_feature_engineering.py  test_information_metrics.py  test_outliers.py  test_utils.py
tests/unit/data_quality/outliers/: constants.py  test_detection.py  test_handling.py  test_stats.py
tests/unit/reports/: test_renderers.py  test_utils.py
tests/unit/reports/core/: test_block.py  test_report.py
tests/unit/visualizations/: test_contracts_mpl.py  test_plots.py  test_utils.py
