[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "explorica"
version = "0.11.3"
description = "A Python framework for streamlined Exploratory Data Analysis (EDA)."
authors = [
    { name="fjodordo", email="fjodor.doronin@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0,<3.0.0",
    "numpy<3.0.0",
    "matplotlib",
    "seaborn",
    "plotly",
    "scipy",
    "statsmodels",
    "openpyxl",
    "reportlab>=3.6,<5"
]
keywords = ["eda", "data-analysis", "statistics", "visualization", "data-science"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.1.0",
    "pytest_mock>=3.15.1",
    "pylint>=2.15.0",
    "flake8==7.3.0",
    "black>=23.0.0,<27.0.0",
    "pypdf>=6.4.0,<7.0.0",
    "beautifulsoup4>=4.14,<4.15"
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-autodoc-typehints>=1.0.0",
    "sphinx_rtd_theme", 
    "numpydoc>=1.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
explorica = ["*.csv", "*.json", "*.yml"]

[project.urls]
"Homepage" = "https://github.com/fjodordo/explorica"
"Bug Tracker" = "https://github.com/fjodordo/explorica/issues"
"Source Code" = "https://github.com/fjodordo/explorica"